# video_processing

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/components/: base_component.py  detector.py  presenter.py  streamer.py
src/config/: settings.py
src/utils/: ipc_utils.py  monitoring.py  pipeline_controller.py
