[tool.poetry]
name = "video-pipeline"
version = "0.1.0"
description = "Multi-process video analysis pipeline"
authors = ["John Fitzgerald"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
opencv-contrib-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
